objects/Contract_Recurring_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Care_Max_Revenue_Threshold__c</fullName>
        <description>If the Pre-Support Total is greater than this amount, do not apply a charge for Business Care</description>
        <inlineHelpText>If the Pre-Support Total is greater than this amount, do not apply a charge for Business Care</inlineHelpText>
        <label>Business Care Max Revenue Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Care_Min_Revenue_Threshold__c</fullName>
        <description>If the Pre-Support Total is less than this amount, do not apply a charge for Business Care</description>
        <inlineHelpText>If the Pre-Support Total is less than this amount, do not apply a charge for Business Care</inlineHelpText>
        <label>Business Care Min Revenue Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Care_Support_Fee_Percentage__c</fullName>
        <description>Optional override of the default 15%</description>
        <inlineHelpText>Optional override of the default 15%</inlineHelpText>
        <label>Business Care Support Fee Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Commitment Shortfall - Voice</fullName>
                </value>
                <value>
                    <fullName>Commitment Shortfall - Text</fullName>
                </value>
                <value>
                    <fullName>Operational Credit</fullName>
                </value>
                <value>
                    <fullName>Number Buckets</fullName>
                </value>
                <value>
                    <fullName>List Profile Reports</fullName>
                </value>
                <value>
                    <fullName>Monthly Access Fee</fullName>
                </value>
                <value>
                    <fullName>Email Domain</fullName>
                </value>
                <value>
                    <fullName>Client Management</fullName>
                </value>
                <value>
                    <fullName>Agent Voice Portal Licenses</fullName>
                </value>
                <value>
                    <fullName>Agent Text Portal Licenses</fullName>
                </value>
                <value>
                    <fullName>Short Code Fee</fullName>
                </value>
                <value>
                    <fullName>Business Care for Cloud</fullName>
                </value>
                <value>
                    <fullName>Local Minutes Plan</fullName>
                </value>
                <value>
                    <fullName>Toll Free Minutes Plan</fullName>
                </value>
                <value>
                    <fullName>Usage Plan</fullName>
                </value>
                <value>
                    <fullName>Additional Phone Numbers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set__c</fullName>
        <label>Contract Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>Contract Recurring Charges</relationshipLabel>
        <relationshipName>Contract_Recurring_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Note__c</fullName>
        <label>External Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow this recurring charge to be billed at the beginning of the month. Typically used when billing regardless of usage at the beginning of the month.</description>
        <inlineHelpText>Allow this recurring charge to be billed at the beginning of the month. Typically used when billing regardless of usage at the beginning of the month.</inlineHelpText>
        <label>Pre Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Enter quantity when recurring charge is for the new type</description>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <description>Enter quantity when recurring charge is for the new type</description>
        <label>Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Care</fullName>
                </value>
                <value>
                    <fullName>Commitment Shortfall</fullName>
                </value>
                <value>
                    <fullName>Installment Plan</fullName>
                </value>
                <value>
                    <fullName>Monthly Access Fee</fullName>
                </value>
                <value>
                    <fullName>Monthly Flat Fee</fullName>
                </value>
                <value>
                    <fullName>One Time Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Variable Term Flat Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <description>Number of Units if applicable</description>
        <inlineHelpText>Number of Units if applicable</inlineHelpText>
        <label>Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Contract Recurring Charge</label>
    <nameField>
        <displayFormat>CRC-{00000}</displayFormat>
        <label>Contract Recurring Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Recurring Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>